--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "popup-terminal",
   "displayName": "Popup Terminal",
   "description": "Runs your code in a popup terminal (windows only)",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Shwyne/popup-terminal.git"},
   "engines": {
     "vscode": "^1.90.0"
   },
